Fixed button spacing on coursepage template

--- a/SchedulingApp/static/x.css
+++ b/SchedulingApp/static/x.css
@@ -46,7 +46,7 @@ html {
   display: inline;
   font-size: 18px;
   font-weight:bolder;
-  margin: 4px 2px;
+  margin: 2px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
@@ -119,7 +119,7 @@ html {
 
 #myTable th, td {
   text-align: left;
-  padding: 16px;
+  padding: 16px 4px;
 }
 
 #myTable tr:nth-child(even) {
